--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "latest",
+    "react-native-toast-message": "^2.3.0",
     "styled-components": "latest"
   },
   "devDependencies": {
