--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "latest",
     "expo-linear-gradient": "latest",
     "expo-status-bar": "latest",
+    "moti": "^0.30.0",
     "react": "19.0.0",
     "react-native": "^0.79.3",
     "react-native-dotenv": "^3.4.11",
