--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
+    "axios": "^1.10.0",
     "date-fns": "4.1.0",
     "expo": "latest",
     "expo-font": "latest",
     "expo-linear-gradient": "latest",
     "expo-status-bar": "latest",
+    "metro-react-native-babel-preset": "^0.77.0",
     "moti": "^0.30.0",
     "react": "19.0.0",
     "react-native": "^0.79.3",
