--- a/package.json
+++ b/package.json
@@ -15,25 +15,30 @@
     "@react-navigation/native-stack": "^7.3.16",
     "axios": "^1.10.0",
     "date-fns": "4.1.0",
-    "expo": "latest",
+    "expo": "^53.0.0",
     "expo-font": "latest",
     "expo-linear-gradient": "latest",
     "expo-status-bar": "latest",
-    "metro-react-native-babel-preset": "^0.77.0",
+    "metro": "^0.82.0",
+    "metro-core": "^0.76.0",
     "moti": "^0.30.0",
     "react": "19.0.0",
-    "react-native": "^0.79.3",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
-    "react-native-reanimated": "^3.17.5",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "latest",
     "react-native-toast-message": "^2.3.0",
-    "styled-components": "latest"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@types/react": "^19.0.14",
+    "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "metro-config": "^0.76.0",
+    "metro-react-native-babel-preset": "^0.76.0",
     "typescript": "^5.0.0"
   }
 }
