--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,16 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
-      // "@screens/*": ["screens/*"],
-      // "@components/*": ["components/*"],
-      // "@services/*": ["services/*"]
-      // "@features/*": ["features/*"],
-      // "@global/*": ["global/*"],
-      // "@assets/*": ["assets/*"],
-      // "@theme/*": ["theme/*"]
+      "@/*": ["src/*"]
     },
 
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "jsx": "react-native",
+    "jsx": "react-jsx",
     "module": "Node16",
     "moduleResolution": "node16",
     "noEmit": true,
